--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,7 +2,7 @@
   text-align: center;
   background-color: white;
   font-family: serif;
-  color: dimgrey;
+  color: gray;
   margin: 25px;
 }
 .app_logoutIcon {
