--- a/src/features/auth/Auth.module.css
+++ b/src/features/auth/Auth.module.css
@@ -1,6 +1,6 @@
-* {
-  /* outline: 1px solid magenta; */
-}
+/* * {
+  outline: 1px solid magenta;
+} */
 
 .back {
   display: flex;
@@ -9,7 +9,7 @@
   align-items: center;
   text-align: center;
   min-height: 100vh;
-  background-color: #EBECF0;
+  background-color: #ebecf0;
   color: dimgray;
 }
 
@@ -19,9 +19,12 @@
   height: 600px;
   width: 500px;
   border-radius: 50px;
-  background: #EBECF0;
-  box-shadow: inset 10px 10px 30px #c8c9cc,
-  inset -10px -10px 30px #ffffff;
+  background: #ebecf0;
+  box-shadow: inset 10px 10px 30px #c8c9cc, inset -10px -10px 30px #ffffff;
+}
+.card:hover {
+  background-color: #ebecf0;
+  box-shadow: -2px -2px 3px 1px #c8c9cc, 2px 2px 3px 1px #ffffff;
 }
 
 .button {
@@ -32,21 +35,22 @@
   border: 0;
   color: dimgray;
   border-radius: 50px;
-  background: #EBECF0;
-  box-shadow: 5px 5px 20px #c8c9cc,
-  -5px -5px 20px #ffffff;
+  background: #ebecf0;
+  box-shadow: 5px 5px 20px #c8c9cc, -5px -5px 20px #ffffff;
   font-size: 24px;
   transition: box-shadow 0.4s ease-in-out;
 }
 
 .button:hover {
-  background-color: #EBECF0;
+  background-color: #ebecf0;
   box-shadow: -2px -2px 3px 1px #c8c9cc, 2px 2px 3px 1px #ffffff;
   cursor: pointer;
 }
 
 .login_tx {
   margin-top: 80px;
+  margin-left: auto;
+  margin-right: auto;
   font-size: 50px;
 }
 
@@ -57,10 +61,10 @@
   margin-left: 100px;
   margin-right: 100px;
   margin-top: 30px;
-  background-color: #EBECF0;
+  background-color: #ebecf0;
   box-shadow: -2px -2px 3px 1px #c8c9cc, 2px 2px 3px 1px #ffffff;
 }
-.input_name::placeholder{
+.input_name::placeholder {
   color: gray;
 }
 .input_pass {
@@ -70,16 +74,18 @@
   margin-left: 100px;
   margin-right: 100px;
   margin-top: 30px;
-  background-color: #EBECF0;
+  background-color: #ebecf0;
   box-shadow: -2px -2px 3px 1px #c8c9cc, 2px 2px 3px 1px #ffffff;
 }
-.input_pass::placeholder{
+.input_pass::placeholder {
   color: gray;
 }
 
-.span_tx{
+.span_tx {
   font-weight: 600;
   font-size: 20px;
   margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
   cursor: pointer;
 }
