--- a/src/features/task/TaskForm.module.css
+++ b/src/features/task/TaskForm.module.css
@@ -37,6 +37,7 @@
   background-color: rgba(200, 200, 200, 0.2);
 }
 .modal{
+  background-color: #ebecf0;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
