--- a/src/features/task/TaskList.module.css
+++ b/src/features/task/TaskList.module.css
@@ -39,3 +39,16 @@
 .edit_delete {
   font-weight: bold;
 }
+
+.red {
+  font-size: medium;
+  color: red;
+}
+.blue {
+  font-size: medium;
+  color: blue;
+}
+.green {
+  font-size: medium;
+  color: green;
+}
