--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,6 @@
-* {
-  /* outline: 1px solid magenta; */
-}
+/* * {
+  outline: 1px solid magenta;
+} */
 .app_root {
   background-color: #ebecf0;
   text-align: center;
