--- a/src/features/task/TaskDisplay.module.css
+++ b/src/features/task/TaskDisplay.module.css
@@ -1,10 +1,12 @@
-/* *{
+  /* *{
   outline: 1px solid magenta;
 } */
 
 .card {
-  padding: 10px 40px 10px 40px;
-  margin-bottom: 100px;
+  padding: 20px 40px 0px 40px;
+  margin: 60px auto;
+  height: 600px;
+  width: 300px;
   border-radius: 30px;
   box-shadow: 20px 20px 40px #c8c9cc, -10px -10px 30px #ffffff;
   transition: box-shadow 0.4s ease-in-out;
@@ -12,4 +14,9 @@
 .card:hover {
   background-color: #ebecf0;
   box-shadow: -2px -2px 3px 1px #c8c9cc, 2px 2px 3px 1px #ffffff;
+}
+.title{
+  display: flex;
+  justify-content: center;
+  color: #3f50b5; 
 }
