--- a/src/features/task/TaskList.module.css
+++ b/src/features/task/TaskList.module.css
@@ -1,9 +1,9 @@
-/* *{
+ /* *{
   outline: 1px solid magenta;
 } */
 
 .card {
-  margin: 20px;
+  margin: 5px 10px 0px 100px;
   padding-top: 5px;
   min-height: 95%;
   border-radius: 50px;
