--- a/src/features/auth/Auth.module.css
+++ b/src/features/auth/Auth.module.css
@@ -16,7 +16,8 @@
   width: 500px;
   border-radius: 50px;
   background: #ebecf0;
-  box-shadow: inset 10px 10px 30px #c8c9cc, inset -10px -10px 30px #ffffff;
+  box-shadow: 5px 5px 20px #c8c9cc, -5px -5px 20px #ffffff;
+  transition: box-shadow 0.4s ease-in-out;
 }
 .card:hover {
   background-color: #ebecf0;
