--- a/src/features/task/TaskList.module.css
+++ b/src/features/task/TaskList.module.css
@@ -1,8 +1,8 @@
 .card {
-  margin: 5px 10px 0px 100px;
-  padding-top: 5px;
-  min-height: 95%;
-  border-radius: 50px;
+  width: 80%;
+  height: 60%;
+  min-height: 100%;
+  border-radius: 20px;
   box-shadow: 20px 20px 40px #c8c9cc, -10px -10px 30px #ffffff;
   transition: box-shadow 0.4s ease-in-out;
 }
@@ -12,12 +12,12 @@
 }
 
 .table {
-  margin: 45px;
-  min-width: 50%;
+  margin: 50px;
+  min-width: 70%;
 }
 
 .avatar {
-  margin: 0px 0px 0px 10px;
+  margin: 0px 0px 0px 20px;
 }
 
 .list_icon {
