--- a/src/features/task/Detail.module.css
+++ b/src/features/task/Detail.module.css
@@ -1,19 +1,13 @@
 
 .card {
-  padding: 20px 40px 0px 40px;
-  margin: 60px auto;
+  font-size: 22px;
+  padding: 40px 30px 0px 40px;
   height: 600px;
-  width: 300px;
-  border-radius: 30px;
-  box-shadow: 20px 20px 40px #c8c9cc, -10px -10px 30px #ffffff;
-  transition: box-shadow 0.4s ease-in-out;
-}
-.card:hover {
-  background-color: #ebecf0;
-  box-shadow: -2px -2px 3px 1px #c8c9cc, 2px 2px 3px 1px #ffffff;
+  width: 400px;
 }
 .title {
   display: flex;
   justify-content: center;
   color: #3f50b5;
 }
+
